--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,16 +3,51 @@
 /* Variables */
 
 $color-light: #fff;
-$color-dark: #444;
+$color-dark: #545454;
+$green-color: #02bf63;
+
 
 $font-logo: 'Sacramento', cursive;
 $font-header: 'Oswald', sans-serif;
 $font-text: 'Source Sans Pro', sans-serif;
 
 /* Global */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $color-dark;
+  border-radius: 10px;
+}
 
 *, *::before, *::after {
   box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5 {
+  color: $green-color;
+  font-weight: bold;
+  text-align: center;
+  padding: 10px 0;
+}
+
+ul li {
+  text-align: center;
+  padding: 5px 0;
+
+}
+span, p, a{
+  color: $color-dark;
+  text-decoration: none;
 }
 
 body {
@@ -29,6 +64,8 @@ body {
   margin: 0 auto;
 }
 
+
+
 .section-title {
   font-size: 22px;
   text-transform: uppercase;
@@ -42,9 +79,54 @@ body {
 }
 
 /* Layout */
+header {
+  background-color: $color-dark;
+  -webkit-box-shadow: 0px 11px 17px -15px rgba(84, 84, 84, 1);
+  -moz-box-shadow: 0px 11px 17px -15px rgba(84, 84, 84, 1);
+  box-shadow: 0px 11px 17px -15px rgba(84, 84, 84, 1);
+}
+/* Logo */
+.top {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+
+.logo {
+  margin: 0px;
+  padding: 0px;
+  max-height:150px;
+  }
+
+  .git {
+    position: fixed;
+    top: 50%;
+    right: 0px;
+    background-color: $color-dark;
+    border-radius: 50% 0 0 50%;
+    -webkit-box-shadow: -4px 5px 17px -11px rgba(84, 84, 84, 1);
+    -moz-box-shadow: -4px 5px 17px -11px rgba(84, 84, 84, 1);
+    box-shadow: -4px 5px 17px -11px rgba(84, 84, 84, 1);
+
+  }
+
+  .git i {
+    padding: 20px;
+    color: $color-light;
+    font-size: 2rem;
+    transition: all 0.3s ease-in-out;
+  }
+  .git i:hover {
+    color: $green-color;
+    scale: 1.1;
+  }
+
+
 
 .wrapper {
   display: flex;
+  height: 600px;
   margin-left: 10px;
 }
 
@@ -54,6 +136,7 @@ body {
 
 .posts {
   flex: 2 0 0;
+  overflow-y: scroll;
 }
 
 .sidebar, .posts {
@@ -62,17 +145,12 @@ body {
   padding: 40px;
   border: 1px solid $color-dark;
   border-radius: 5px;
+  -webkit-box-shadow: 0px 8px 29px -20px rgba(84, 84, 84, 1);
+  -moz-box-shadow: 0px 8px 29px -20px rgba(84, 84, 84, 1);
+  box-shadow: 0px 8px 29px -20px rgba(84, 84, 84, 1);
 }
 
-/* Logo */
 
-.logo {
-  font-family: $font-logo;
-  font-weight: 400;
-  font-size: 104px;
-  line-height: 1;
-  text-align: center;
-}
 
 /* Lists */
 
@@ -82,6 +160,7 @@ body {
   padding: 0;
   .active {
     font-weight: bold;
+    color: $green-color;
   }
 }
 
