--- a/sass/style.scss
+++ b/sass/style.scss
@@ -232,7 +232,49 @@ header {
     margin: 0 10px 0 0;
   }
 }
+//TAGS
+.tags {
+  font-size: 20px;
+  font-weight: bold;
+  width: 100%;
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  margin-bottom: 48px;
 
+  li {
+    padding: 0;
+    margin: 0;
+    height: 36px;
+  }
+}
+.tag-size-1 {
+  font-size: 1rem;
+  color: red;
+}
+
+.tag-size-2 {
+  font-size: 1.2rem;
+  color: green
+}
+
+.tag-size-3 {
+  font-size: 1.4em;
+  color: $green-color
+}
+
+.tag-size-4 {
+  font-size: 1.6rem;
+  color: $color-dark
+}
+
+.tag-size-5 {
+  font-size: 1.9rem;
+  color: goldenrod;
+}
 
 @media only screen and (max-width: 800px) {
 
